🐛 fix: fixing facepile overflow

--- a/src/css/blocks/webmentions.css
+++ b/src/css/blocks/webmentions.css
@@ -54,16 +54,20 @@
 
   & .facepile {
     display: flex;
-    margin-left: calc(var(--border-size-3) * -1);
+    margin-left: calc((var(--border-size-3) * -1) + var(--size-3));
+    flex-wrap: wrap;
+    align-items: center;
+
+    & h3 {
+      margin-left: calc((var(--size-3) * -1) + var(--border-size-3));
+      margin-right: calc(var(--size-3) + var(--size-2));
+    }
 
     & .face-link {
       padding: 0;
       margin: 0;
       text-decoration: none;
-
-      &:not(:first-of-type) {
-        margin-left: calc(var(--size-3) * -1);
-      }
+      margin-left: calc(var(--size-3) * -1);
 
       &:hover {
         background-color: transparent;
